Resolves: tdf#102999 get_selected_printer is transfer none

gtk_print_unix_dialog_get_settings returns a new GObject we
have to unref, but gtk_print_unix_dialog_get_selected_printer doesn't
add a ref so dies along with its parent dialog.

Change-Id: Ie5f8ecd83f5cc2c13e4a8c3ba292ffa381f9bdf5